some changes in css

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
   margin: 3rem auto;
 }
 
-/* card container */
+/* card container-- */
 .card-container {
   position: relative;
   width: 365px;
